--- a/config_cds.yaml
+++ b/config_cds.yaml
@@ -18,7 +18,7 @@ eval_every_steps: 10000
 num_eval_episodes: 10
 # dataset
 replay_buffer_dir: ../../collect    # make sure to update this if you change hydra run dir
-replay_buffer_size: 100        # max: 10M
+replay_buffer_size: 10000000        # max: 10M
 replay_buffer_num_workers: 4
 batch_size: ${agent.batch_size}
 # misc
