--- a/config_mop.yaml
+++ b/config_mop.yaml
@@ -5,20 +5,22 @@ defaults:
 # unsupervised exploration
 # expl_agent: td3
 # task settings
-task: walker_walk                               # main task to train (relable other datasets to this task)
-share_task: [walker_walk, walker_run, walker_stand, walker_flip]           # task for data sharing
-data_type: [medium-replay, medium-replay, medium-replay, medium-replay]              # dataset for data sharing (corresponding each share_task)
+env: walker
+tasks: [walker_walk, walker_run]                # main task to train (relable other datasets to this task)
+data_type: [medium, medium-replay]              # dataset for data sharing (corresponding each share_task)
+
+teacher_dir: ../../teacher_models/${env}
 
 discount: 0.99
 # train settings
-num_grad_steps: 10 #10
-log_every_steps: 1 #1
+num_grad_steps: 10
+log_every_steps: 1
 # eval
-eval_every_steps: 1 #1
-num_eval_episodes: 1 #1
+eval_every_steps: 1
+num_eval_episodes: 1
 # dataset
 replay_buffer_dir: ../../collect    # make sure to update this if you change hydra run dir
-replay_buffer_size: 100     # 100   # max: 10M
+replay_buffer_size: 100        # max: 10M
 replay_buffer_num_workers: 4
 batch_size: ${agent.batch_size}
 # misc
@@ -36,6 +38,7 @@ hydra:
 #    dir: ./result_td3bc_share/${task}-Share_${share_task[0]}_${share_task[1]}-Data_${data_type[0]}_${data_type[1]}-${agent.name}-${now:%m-%d-%H-%M-%S}
 #    dir: ./result_cql/${task}-${data_main}-${agent.name}-${now:%m-%d-%H-%M-%S}
 #    dir: ./result_pbrl/${task}-${data_main}-${agent.name}-${now:%m-%d-%H-%M-%S}
-    dir: ./result_pbrl_share/${task}-Share_${share_task[0]}_${share_task[1]}-${data_type[0]}-${agent.name}-${now:%m-%d-%H-%M-%S}
+#    dir: ./result_pbrl_share/${task}-Share_${share_task[0]}_${share_task[1]}-${data_type[0]}-${agent.name}-${now:%m-%d-%H-%M-%S}
 #    dir: ./output/${task}-${data_main}-${agent.name}-${now:%m-%d-%H-%M-%S}
+    dir: ./result_mop/${env}-${now:%m-%d-%H-%M-%S}
 
