--- a/config_mop.yaml
+++ b/config_mop.yaml
@@ -6,8 +6,8 @@ defaults:
 # expl_agent: td3
 # task settings
 env: walker
-tasks: [walker_walk, walker_run]                # main task to train (relable other datasets to this task)
-data_type: [medium, medium-replay]              # dataset for data sharing (corresponding each share_task)
+tasks: [walker_walk, walker_stand]                # main task to train (relable other datasets to this task)
+data_type: [medium-replay, medium-replay]              # dataset for data sharing (corresponding each share_task)
 
 teacher_dir: ../../teacher_models/${env}
 
