--- a/config_mop.yaml
+++ b/config_mop.yaml
@@ -13,14 +13,14 @@ teacher_dir: ../../teacher_models/${env}
 
 discount: 0.99
 # train settings
-num_grad_steps: 10
-log_every_steps: 1
+num_grad_steps: 500000
+log_every_steps: 500
 # eval
-eval_every_steps: 1
-num_eval_episodes: 1
+eval_every_steps: 5000
+num_eval_episodes: 10
 # dataset
 replay_buffer_dir: ../../collect    # make sure to update this if you change hydra run dir
-replay_buffer_size: 100        # max: 10M
+replay_buffer_size: 10000000        # max: 10M
 replay_buffer_num_workers: 4
 batch_size: ${agent.batch_size}
 # misc
