Update default config to record video

--- a/config_mop.yaml
+++ b/config_mop.yaml
@@ -26,7 +26,7 @@ batch_size: ${agent.batch_size}
 # misc
 seed: 1
 device: cuda
-save_video: False
+save_video: True
 use_tb: False
 
 # used for train_offline_single
