Update default config pbrl mt

--- a/config_pbrl_mt.yaml
+++ b/config_pbrl_mt.yaml
@@ -12,7 +12,7 @@ data_type: [medium-replay, medium-replay, medium-replay, medium-replay]         
 
 discount: 0.99
 # train settings
-num_grad_steps: 1000000
+num_grad_steps: 500000
 log_every_steps: 1000
 # eval
 eval_every_steps: 10000
