--- a/config_mop.yaml
+++ b/config_mop.yaml
@@ -7,7 +7,7 @@ defaults:
 # task settings
 env: walker
 tasks: [walker_walk, walker_stand]                # main task to train (relable other datasets to this task)
-data_type: [medium, medium]              # dataset for data sharing (corresponding each share_task)
+data_type: [medium, expert]              # dataset for data sharing (corresponding each share_task)
 
 teacher_dir: ../../teacher_models/${env}
 mode: a2a                                # critic2actor, actor2actor, critic2critic2actor
@@ -17,7 +17,7 @@ discount: 0.99
 num_grad_steps: 500000
 log_every_steps: 10000
 # eval
-eval_every_steps: 1000
+eval_every_steps: 10000
 num_eval_episodes: 10
 # dataset
 replay_buffer_dir: ../../collect    # make sure to update this if you change hydra run dir
