--- a/config_mop.yaml
+++ b/config_mop.yaml
@@ -2,15 +2,19 @@ defaults:
   - agent: pbrl                                # td3_bc, cql, pbrl
   - override hydra/launcher: submitit_local
 
+run_name: mop_pd
+
 # unsupervised exploration
 # expl_agent: td3
 # task settings
 env: walker
 tasks: [walker_walk, walker_stand]                # main task to train (relable other datasets to this task)
 data_type: [medium, expert]              # dataset for data sharing (corresponding each share_task)
+share_data: False
 
 teacher_dir: ../../teacher_models/${env}
 mode: a2a                                # critic2actor, actor2actor, critic2critic2actor
+hidden_dim: 256
 
 discount: 0.99
 # train settings
@@ -43,5 +47,5 @@ hydra:
 #    dir: ./result_pbrl/${task}-${data_main}-${agent.name}-${now:%m-%d-%H-%M-%S}
 #    dir: ./result_pbrl_share/${task}-Share_${share_task[0]}_${share_task[1]}-${data_type[0]}-${agent.name}-${now:%m-%d-%H-%M-%S}
 #    dir: ./output/${task}-${data_main}-${agent.name}-${now:%m-%d-%H-%M-%S}
-    dir: ./result_mop/${env}-${now:%m-%d-%H-%M-%S}
+    dir: ./result_mop/${run_name}-${now:%m-%d-%H-%M-%S}
 
