set default config to deterministic actor in utds single

--- a/config_utds_single.yaml
+++ b/config_utds_single.yaml
@@ -32,7 +32,7 @@ use_tb: False
 # used for train_offline_single
 data_main: expert
 
-deterministic_actor: False
+deterministic_actor: True
 
 wandb: True
 hydra:
