--- a/config_utds_single.yaml
+++ b/config_utds_single.yaml
@@ -40,6 +40,6 @@ hydra:
 #    dir: ./result_td3bc_share/${task}-Share_${share_task[0]}_${share_task[1]}-Data_${data_type[0]}_${data_type[1]}-${agent.name}-${now:%m-%d-%H-%M-%S}
 #    dir: ./result_cql/${task}-${data_main}-${agent.name}-${now:%m-%d-%H-%M-%S}
 #    dir: ./result_pbrl/${task}-${data_main}-${agent.name}-${now:%m-%d-%H-%M-%S}
-    dir: ./result_utds_single/${task}-${data_type[0]}-${agent.name}-${now:%m-%d-%H-%M-%S}
+    dir: ./result_utds_single/${run_name}-${now:%m-%d-%H-%M-%S}
 #    dir: ./output/${task}-${data_main}-${agent.name}-${now:%m-%d-%H-%M-%S}
 
