--- a/analyse_distribution.yaml
+++ b/analyse_distribution.yaml
@@ -2,7 +2,7 @@ run_name: analyse_distribution
 
 env: walker
 task: walker_walk
-data_type: medium
+data_type: medium-replay
 
 seed: 1
 device: cuda
@@ -11,9 +11,9 @@ discount: 0.99
 # dataset
 replay_buffer_dir_offline: ../../collect
 replay_buffer_dir_online: ../../collect_pbrl
-replay_buffer_size: 1000000
+replay_buffer_size: 100
 replay_buffer_num_workers: 4
-batch_size: 1000000
+batch_size: 100
 
 hydra:
   run:
