--- a/collect_data_pbrl.yaml
+++ b/collect_data_pbrl.yaml
@@ -6,20 +6,20 @@ defaults:
 # reward_free: false
 # task settings
 env: walker
-task: walker_walk
-data_type: expert
+task: walker_stand
+data_type: medium-replay
 agent_dir: ../../teacher_models/${env}/${task}/${data_type}
 #obs_type: states             # [states, pixels]
 #frame_stack: 3               # only works if obs_type=pixels
 discount: 0.99
 # amount to collect
-num_collect_episodes: 1000     # 2M steps to converge
+num_collect_episodes: 1100
 
 # pretrained
 #snapshot_ts: 100000
 #snapshot_base_dir: ./pretrained_models
 # replay buffer
-replay_buffer_size: 1000000
+replay_buffer_size: 1100000
 replay_buffer_num_workers: 4
 batch_size: ${agent.batch_size}
 nstep: ${agent.nstep}
