--- a/analyse_distribution.yaml
+++ b/analyse_distribution.yaml
@@ -11,9 +11,11 @@ discount: 0.99
 # dataset
 replay_buffer_dir_offline: ../../collect
 replay_buffer_dir_online: ../../collect_pbrl
-replay_buffer_size: 100
+replay_buffer_size: 100000
 replay_buffer_num_workers: 4
-batch_size: 100
+batch_size: 1000000
+
+bins: 100
 
 hydra:
   run:
