--- a/config_pbrl_mt.yaml
+++ b/config_pbrl_mt.yaml
@@ -7,13 +7,13 @@ defaults:
 # task settings
 env: walker
 tasks: [walker_walk, walker_stand]                # main task to train (relable other datasets to this task)
-share_task: [walker_walk, walker_run, walker_stand, walker_flip]           # task for data sharing
-data_type: [medium-replay, medium-replay, medium-replay, medium-replay]              # dataset for data sharing (corresponding each share_task)
+share_task: [walker_walk, walker_run]             # task for data sharing
+data_type: [medium-replay, medium-replay]              # dataset for data sharing (corresponding each share_task)
 
 discount: 0.99
 # train settings
 num_grad_steps: 500000
-log_every_steps: 1000
+log_every_steps: 10000
 # eval
 eval_every_steps: 10000
 num_eval_episodes: 10
@@ -39,5 +39,5 @@ hydra:
 #    dir: ./result_pbrl/${task}-${data_main}-${agent.name}-${now:%m-%d-%H-%M-%S}
 #    dir: ./result_pbrl_share/${task}-Share_${share_task[0]}_${share_task[1]}-${data_type[0]}-${agent.name}-${now:%m-%d-%H-%M-%S}
 #    dir: ./output/${task}-${data_main}-${agent.name}-${now:%m-%d-%H-%M-%S}
-    dir: ./result_pbrl_mt/${env}-${now:%m-%d-%H-%M-%S}
+    dir: ./result_pbrl_mt/${env}-${data_type[0]}-${data_type[1]}-${now:%m-%d-%H-%M-%S}
 
