--- a/analyse_distribution.yaml
+++ b/analyse_distribution.yaml
@@ -11,7 +11,7 @@ discount: 0.99
 # dataset
 replay_buffer_dir_offline: ../../collect
 replay_buffer_dir_online: ../../collect_pbrl
-replay_buffer_size: 100000
+replay_buffer_size: 1000000
 replay_buffer_num_workers: 4
 batch_size: 1000000
 
@@ -19,4 +19,4 @@ bins: 100
 
 hydra:
   run:
-    dir: ./result_analyse_distribution/${task}-${data_type}-${now:%m-%d-%H-%M-%S}
+    dir: ./result_analyse_distribution/${run_name}-${now:%m-%d-%H-%M-%S}
