--- a/config_mop.yaml
+++ b/config_mop.yaml
@@ -16,13 +16,17 @@ teacher_dir: ../../teacher_models/${env}
 mode: a2a                                # critic2actor, actor2actor, critic2critic2actor
 hidden_dim: 256
 
+kendalltau: True
+kt_lambda: 0.1
+kt_alpha: 0.5
+
 discount: 0.99
 # train settings
-num_grad_steps: 500000
-log_every_steps: 10000
+num_grad_steps: 5
+log_every_steps: 1
 # eval
-eval_every_steps: 10000
-num_eval_episodes: 10
+eval_every_steps: 1
+num_eval_episodes: 1
 # dataset
 replay_buffer_dir: ../../collect    # make sure to update this if you change hydra run dir
 replay_buffer_size: 10000000        # max: 10M
