--- a/config_mop.yaml
+++ b/config_mop.yaml
@@ -22,9 +22,10 @@ hidden_layers: 1
 ndcg: False
 ndcg_lambda: 0.1
 ndcg_alpha: 0.5
+sce: False
 
 kendall: True
-noise_vars: [0.001, 0.01, 0.1]
+noise_vars: []
 
 discount: 0.99
 # train settings
